--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,14 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-    
+
+    <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+    <!--dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.22.0</version>
+        </dependency>
+    </dependencies-->
+
 </project>
